--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,11 @@ main {
     width: 100%;
     overflow-y: scroll;
 }
+
+#users {
+    min-height: 5vh;
+    height: 15vh;
+    width: 100%;
+    overflow-y: auto;
+    overflow-x: auto;
+}
